--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -7,6 +7,7 @@ footer {
   flex-direction: row;
   height: 5rem;
   width: 100%;
+  border-top: 0.5rem solid rgba(102, 51, 153, 255);
 }
 
 #logofooter {
