--- a/client/src/components/TeamStats.css
+++ b/client/src/components/TeamStats.css
@@ -1,17 +1,42 @@
-img{
-    width: 50px;
+#logoFiltre{
+    width: 5vw;
+    height: 5vw;
+    margin-top: 5vw;
+}
+
+select{
+    color:antiquewhite;
+    background-color: #2E3039;
+    width: 13vw;
+}
+
+.p-stats{
+    display: flex;
+    justify-content: space-between;
+    width: 20vw;
 }
 
 .stats{
-    font-family: "Rock Salt", cursive;
   padding: 20px;
   font-style: italic;
   caption-side: bottom;
-  color: #666;
-  text-align: right;
+  
   letter-spacing: 1px;
 }
 
 .filtre{
-    text-align: right;
+    font-family: "Rock Salt", cursive;
+    display: flex;
+    flex-direction: column;
+    width: 60vw;
+    background-color: #2E3039;
+    border-radius: 10px;
+    padding-bottom: 1rem;
+    color: antiquewhite;
+    width: 30vw;
+}
+
+.logo-stats{
+    display: flex;
+    flex-direction: row;
 }
