--- a/client/src/components/League.css
+++ b/client/src/components/League.css
@@ -17,6 +17,7 @@
     padding-right: 1rem;
     margin: 1rem;
     border: solid black;
+    box-shadow: 10px 5px 5px rgba(102, 51, 153, 255);
     border-radius: 1em;
 
 }
