SaveWork New version+ CSS

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,10 @@
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  /*font-family: "Lato", sans-serif;*/
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
   height: 100vh;
   
   font-size: 16px;
@@ -22,17 +25,35 @@ body {
 
 .document{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  background-color: rgba(0, 0, 0, 0.876);
 }
 
 .MainWrapper{
   display: flex;
-  align-items :  flex-start;
+  width: 100%;
   justify-content: center;
-  gap : 1rem; 
 }
 
 .videoWrapper{
   padding-top: 3rem;
+}
+
+.lateralNavbar{
+    background: black;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 2rem 2rem 0 1rem;
+    border-top: 0.3rem solid rgba(102, 51, 153, 255);
+}
+
+.lateralNavbaTitle{
+  font-family: "Arvo", serif;
+  color: white;
+}
+
+.lateralNavbaButton{
+
 }
 
