second modif css teamstats

--- a/client/src/components/TeamStats/TeamStats.css
+++ b/client/src/components/TeamStats/TeamStats.css
@@ -7,6 +7,12 @@
     margin: 5%;
 }
 
+.tabTittle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .back-select{
     background-color: #663399;
 }
