--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,51 +10,51 @@ body {
   font-weight: 300;
   font-style: normal;
   height: 100vh;
-  
+
   font-size: 16px;
   line-height: 1.7;
   color: black;
   margin: 0;
 }
 
-.main{
+.main {
   margin-top: 3rem;
   display: flex;
   justify-content: center;
 }
 
-.document{
+.document {
   display: flex;
   flex-direction: row;
   background-color: rgba(0, 0, 0, 0.876);
 }
 
-.MainWrapper{
+.MainWrapper {
   display: flex;
   width: 100%;
   justify-content: center;
 }
 
-.videoWrapper{
+.videoWrapper {
   padding-top: 3rem;
 }
 
-.lateralNavbar{
-    background: black;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 2rem 1rem 0 1rem;
-    border-top: 0.3rem solid rgba(102, 51, 153, 255);
+.lateralNavbar {
+  background: black;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem 1rem 0 1rem;
+  border-top: 0.3rem solid rgba(102, 51, 153, 255);
 }
 
-.lateralNavbaTitle{
+.lateralNavbaTitle {
   font-family: "Arvo", serif;
   color: white;
 }
 
 /* Remove all decoration*/
-.lateralNavbaButton{
+.lateralNavbaButton {
   background: none;
   color: inherit;
   border: none;
@@ -64,7 +64,6 @@ body {
   outline: inherit;
 }
 
-
 .lateralNavbaButton {
   display: flex;
   gap: 1rem;
@@ -73,16 +72,38 @@ body {
   outline: none;
   padding: 0.3rem 2rem 0.3rem 2rem;
   border-radius: 5px;
-  
 }
 
 .lateralNavbaButton:hover {
   background-color: #663399;
 }
 
+.textNavbar {
+  white-space: nowrap;
+  font-family: "Arvo", serif;
+  color: white;
+}
 
-.textNavbar{
-    white-space: nowrap;
-    font-family: "Arvo", serif;
-    color: white;
+@media screen and (max-width: 600px) {
+  .document {
+    flex-direction: column;
+  }
+
+  .lateralNavbar {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .buttonresponsive {
+    flex: 1 1 5rem;
+  }
+
+  .lateralNavbaTitle {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .MainWrapper {
+    margin: 1rem 0 1rem 0;
+  }
 }
