--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -17,6 +17,10 @@ nav ul {
   margin-right: 3%;
 }
 
+nav ul li {
+  color: white;
+}
+
 .navbar {
   height: 5rem;
   width: 100%;
@@ -27,19 +31,24 @@ nav ul {
   height: 50px;
 }
 
-.WrappLogoTitle{
-    display: flex;
-    background: rgb(2,0,36);
-    background: linear-gradient(159deg, rgba(2,0,36,1) 5%, rgba(9,9,38,1) 50%, rgba(102,51,153,1) 98%);
-    align-items: center;
-    height: 100%;
+.WrappLogoTitle {
+  display: flex;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    159deg,
+    rgba(2, 0, 36, 1) 5%,
+    rgba(9, 9, 38, 1) 50%,
+    rgba(102, 51, 153, 1) 98%
+  );
+  align-items: center;
+  height: 100%;
 }
 
-.AppName{
-    font-weight: 800;
-    padding: 0 2rem 0 1rem;
+.AppName {
+  font-weight: 800;
+  padding: 0 2rem 0 1rem;
 }
 
-.MenuList{
-    color: #a0a0a0;
+.MenuList {
+  color: #a0a0a0;
 }
