--- a/client/src/components/SeasonTab/SeasonTab.css
+++ b/client/src/components/SeasonTab/SeasonTab.css
@@ -1,102 +1,107 @@
-.WrappingTab{
-    display: flex;
-    flex-direction: column;
-    width: 30vw;
-    background-color: #2E3039;
-    border-radius: 10px;
-    padding-bottom: 1rem;
+.WrappingTab {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  background-color: #2e3039;
+  border-radius: 10px;
+  padding-bottom: 1rem;
 }
 
-.wrapOptions{
-    display: flex;
-    padding: 0 1rem 0 1rem;
+.wrapOptions {
+  display: flex;
+  padding: 0 1rem 0 1rem;
 }
 
-.LeagueLogo{
-    width: 5vw;
+.LeagueLogo {
+  width: 5vw;
 }
 
-.tabTittle{
-    padding: 1rem;
-    display: flex;
+.tabTittle {
+  padding: 1rem;
+  display: flex;
 }
 
-.tabLMainTittle{
-
-    font-size: 1.2rem;
+.tabLMainTittle {
+  font-size: 1.2rem;
 }
 
-.tabLSubTittle{
-    font-size: 0.7rem;
+.tabLSubTittle {
+  font-size: 0.7rem;
 }
 
 .wrapTittles {
-    display: flex;
-    flex-direction: column;
-    padding-left: 2rem;
-    color : white;
+  display: flex;
+  flex-direction: column;
+  padding-left: 2rem;
+  color: white;
 }
 
-.menuCard, .menuCard2 {
-    display: block;
-    text-align: center;
-    font-size: 0.7rem;
-    background-color: white;
-    color : #17181C;
-    border-radius: 10px;
+.menuCard,
+.menuCard2 {
+  display: block;
+  text-align: center;
+  font-size: 0.7rem;
+  background-color: white;
+  color: #17181c;
+  border-radius: 10px;
 }
 
-.menuCard{
-    flex: 1 1 2rem;
+.menuCard {
+  flex: 1 1 2rem;
 }
 
-.menuCard2{
-    flex: 2 3 5rem;
+.menuCard2 {
+  flex: 2 3 5rem;
 }
 
-.menuContent{
-    flex: 1 1 2rem;
+.menuContent {
+  flex: 1 1 2rem;
 }
 
-.menuContent2{
-    flex: 2 3 5rem;
+.menuContent2 {
+  flex: 2 3 5rem;
 
-    display: flex;
-    align-items : center;
-    height: 2rem;
-    font-size: 0.7rem;
-    color : white;
-    border-radius: 10px;
-    justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  height: 2rem;
+  font-size: 0.7rem;
+  color: white;
+  border-radius: 10px;
+  justify-content: space-evenly;
 }
 
-
-.menuContent{
-    display: flex;
-    align-items : center;
-    justify-content: center;
-    height: 2rem;
-    font-size: 0.7rem;
-    color : white;
-    border-radius: 10px;
+.menuContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2rem;
+  font-size: 0.7rem;
+  color: white;
+  border-radius: 10px;
 }
 
-.wrapContent{
-    display: flex;
-    padding: 0 1rem 0 1rem;
-    height: 2rem;
-    height: 2rem;
-    align-items: center;
+.wrapContent {
+  display: flex;
+  padding: 0 1rem 0 1rem;
+  height: 2rem;
+  height: 2rem;
+  align-items: center;
 }
 
-.dislayQualiciation{
-    display: block;
-    color: white;
-    font-size: 0.8rem;
-    padding-left: 20px;
-    background: #17181C;
+.dislayQualiciation {
+  display: block;
+  color: white;
+  font-size: 0.8rem;
+  padding-left: 20px;
+  background: #17181c;
 }
 
-.TeamLogoInMenu{
-    width: 2vw;
+.TeamLogoInMenu {
+  width: 2vw;
+}
+
+@media screen and (max-width: 600px) {
+  .WrappingTab {
+    width: 80%;
+  }
 }
