--- a/client/src/components/TopScorers/TopScorer.css
+++ b/client/src/components/TopScorers/TopScorer.css
@@ -1,11 +1,11 @@
 .WrappingTabs {
-    display: flex;
-    flex-direction: column;
-    width: 70vw;
-    background-color: #2e3039;
-    border-radius: 10px;
-    padding-bottom: 1rem;
-    margin: 2rem 0 2rem 0;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  background-color: #2e3039;
+  border-radius: 10px;
+  padding-bottom: 1rem;
+  margin: 2rem 0 2rem 0;
 }
 
 .wrapOptions {
@@ -89,4 +89,10 @@
   color: white;
   font-size: 0.8rem;
   background: #17181c;
+}
+
+@media screen and (max-width: 600px) {
+  .WrappingTabs {
+    width: 80vw;
+  }
 }
