--- a/client/src/components/TeamStats/TeamStats.css
+++ b/client/src/components/TeamStats/TeamStats.css
@@ -7,7 +7,6 @@
 
 .tabTittle {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -18,13 +17,17 @@
 #select {
   color: antiquewhite;
   background-color: #663399;
-  width: 13vw;
+  width: 40%;
 }
 
 .p-stats {
   display: flex;
   justify-content: space-between;
   width: 20vw;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: white;
 }
 
 .stats {
@@ -40,19 +43,20 @@
   font-size: 0.7rem;
   display: flex;
   flex-direction: column;
-  width: 60vw;
+  width: 80%;
   background-color: #2e3039;
   border-radius: 10px;
+  margin: 2rem 0 2rem 0;
   padding-bottom: 1rem;
   color: antiquewhite;
-  width: 30vw;
 }
 
 .logo-et-stats {
   display: flex;
-  flex-direction: column;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
+  margin-top: 1rem;
 }
 
 .logo-stats {
@@ -60,12 +64,20 @@
   justify-content: center;
   align-items: center;
 }
+
+#title {
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 1.2rem;
+}
 @media screen and (max-width: 600px) {
   .logo-et-stats {
     width: 70%;
   }
-
-  .filtre {
-    width: 90%;
+  .logo-et-stats {
+    flex-direction: column;
+    gap: 1rem;
   }
 }
